@@ -10,7 +10,6 @@ packages = [{ include = "timeturner" }]
 python = "^3.10"
 rich = "*"
 typer = { extras = ["all"], version = "*" }
-pendulum = { version = "3.0.0a1", allow-prereleases = true }
 pydantic = "^1.10.5"
 tomlkit = "^0.11.6"
 
