@@ -1,7 +1,6 @@
-from datetime import date
+from datetime import date, time
 
 import pytest
-from pendulum.time import Time
 
 from tests.helpers import parse
 from timeturner import models, timeturner
@@ -14,8 +13,8 @@ GET_SUMMARY_TEST_CASES = [
         models.DailySummary(
             day=date(1985, 5, 25),
             day_type=DayType.WEEKEND,
-            work_time=timeturner.Duration(),
-            break_time=timeturner.Duration(),
+            work_time=timeturner.timedelta(),
+            break_time=timeturner.timedelta(),
             start=None,
             end=None,
         ),
@@ -32,11 +31,11 @@ GET_SUMMARY_TEST_CASES = [
         models.DailySummary(
             day=date(1985, 5, 25),
             day_type=DayType.WEEKEND,
-            work_time=timeturner.Duration(hours=1),
-            break_time=timeturner.Duration(),
-            over_time=timeturner.Duration(hours=1),
-            start=Time(0, 0),
-            end=Time(1, 0),
+            work_time=timeturner.timedelta(hours=1),
+            break_time=timeturner.timedelta(),
+            over_time=timeturner.timedelta(hours=1),
+            start=time(0, 0),
+            end=time(1, 0),
         ),
         id="one short segment",
     ),
@@ -56,11 +55,11 @@ GET_SUMMARY_TEST_CASES = [
         models.DailySummary(
             day=date(1985, 5, 25),
             day_type=DayType.WEEKEND,
-            work_time=timeturner.Duration(hours=2),
-            break_time=timeturner.Duration(),
-            over_time=timeturner.Duration(hours=2),
-            start=Time(0, 0),
-            end=Time(2, 0),
+            work_time=timeturner.timedelta(hours=2),
+            break_time=timeturner.timedelta(),
+            over_time=timeturner.timedelta(hours=2),
+            start=time(0, 0),
+            end=time(2, 0),
         ),
         id="two segments, no overlap",
     ),
@@ -80,11 +79,11 @@ GET_SUMMARY_TEST_CASES = [
         models.DailySummary(
             day=date(1985, 5, 25),
             day_type=DayType.WEEKEND,
-            work_time=timeturner.Duration(hours=2),
-            break_time=timeturner.Duration(),
-            over_time=timeturner.Duration(hours=2),
-            start=Time(0, 0),
-            end=Time(2, 0),
+            work_time=timeturner.timedelta(hours=2),
+            break_time=timeturner.timedelta(),
+            over_time=timeturner.timedelta(hours=2),
+            start=time(0, 0),
+            end=time(2, 0),
         ),
         id="two segments, mini gap",
     ),
@@ -104,11 +103,11 @@ GET_SUMMARY_TEST_CASES = [
         models.DailySummary(
             day=date(1985, 5, 25),
             day_type=DayType.WEEKEND,
-            work_time=timeturner.Duration(hours=1, minutes=59),
-            break_time=timeturner.Duration(hours=1, minutes=1),
-            over_time=timeturner.Duration(hours=1, minutes=59),
-            start=Time(0, 0),
-            end=Time(3, 0),
+            work_time=timeturner.timedelta(hours=1, minutes=59),
+            break_time=timeturner.timedelta(hours=1, minutes=1),
+            over_time=timeturner.timedelta(hours=1, minutes=59),
+            start=time(0, 0),
+            end=time(3, 0),
         ),
         id="two segments, with break",
     ),
@@ -128,11 +127,11 @@ GET_SUMMARY_TEST_CASES = [
         models.DailySummary(
             day=date(1985, 5, 25),
             day_type=DayType.WEEKEND,
-            work_time=timeturner.Duration(hours=8, minutes=0),
-            break_time=timeturner.Duration(hours=1, minutes=0),
-            over_time=timeturner.Duration(hours=8, minutes=0),
-            start=Time(0, 0),
-            end=Time(9, 0),
+            work_time=timeturner.timedelta(hours=8, minutes=0),
+            break_time=timeturner.timedelta(hours=1, minutes=0),
+            over_time=timeturner.timedelta(hours=8, minutes=0),
+            start=time(0, 0),
+            end=time(9, 0),
         ),
         id="two segments, with long enough break",
     ),
@@ -147,11 +146,11 @@ GET_SUMMARY_TEST_CASES = [
         models.DailySummary(
             day=date(1985, 5, 25),
             day_type=DayType.WEEKEND,
-            work_time=timeturner.Duration(hours=8, minutes=15),
-            break_time=timeturner.Duration(minutes=45),
-            over_time=timeturner.Duration(hours=8, minutes=15),
-            start=Time(0, 0),
-            end=Time(9, 0),
+            work_time=timeturner.timedelta(hours=8, minutes=15),
+            break_time=timeturner.timedelta(minutes=45),
+            over_time=timeturner.timedelta(hours=8, minutes=15),
+            start=time(0, 0),
+            end=time(9, 0),
         ),
         id="one segments, without break",
     ),
@@ -166,11 +165,11 @@ GET_SUMMARY_TEST_CASES = [
         models.DailySummary(
             day=date(1985, 5, 25),
             day_type=DayType.WEEKEND,
-            work_time=timeturner.Duration(hours=4, minutes=45),
-            break_time=timeturner.Duration(minutes=15),
-            over_time=timeturner.Duration(hours=4, minutes=45),
-            start=Time(0, 0),
-            end=Time(5, 0),
+            work_time=timeturner.timedelta(hours=4, minutes=45),
+            break_time=timeturner.timedelta(minutes=15),
+            over_time=timeturner.timedelta(hours=4, minutes=45),
+            start=time(0, 0),
+            end=time(5, 0),
         ),
         id="one segments, without break",
     ),
@@ -190,11 +189,11 @@ GET_SUMMARY_TEST_CASES = [
         models.DailySummary(
             day=date(1985, 5, 25),
             day_type=DayType.WEEKEND,
-            work_time=timeturner.Duration(hours=4, minutes=30),
-            break_time=timeturner.Duration(minutes=30),
-            over_time=timeturner.Duration(hours=4, minutes=30),
-            start=Time(0, 0),
-            end=Time(5, 0),
+            work_time=timeturner.timedelta(hours=4, minutes=30),
+            break_time=timeturner.timedelta(minutes=30),
+            over_time=timeturner.timedelta(hours=4, minutes=30),
+            start=time(0, 0),
+            end=time(5, 0),
         ),
         id="two segments short, with break",
     ),
@@ -216,15 +215,15 @@ GET_SUMMARY_TEST_CASES = [
         models.DailySummary(
             day=date(1985, 5, 25),
             day_type=DayType.WEEKEND,
-            work_time=timeturner.Duration(hours=4, minutes=30),
-            break_time=timeturner.Duration(minutes=30),
-            over_time=timeturner.Duration(hours=4, minutes=30),
-            start=Time(0, 0),
-            end=Time(5, 0),
+            work_time=timeturner.timedelta(hours=4, minutes=30),
+            break_time=timeturner.timedelta(minutes=30),
+            over_time=timeturner.timedelta(hours=4, minutes=30),
+            start=time(0, 0),
+            end=time(5, 0),
             by_tag={
-                "A": timeturner.Duration(hours=2),
-                "B": timeturner.Duration(hours=4, minutes=30),
-                "C": timeturner.Duration(hours=2, minutes=30),
+                "A": timeturner.timedelta(hours=2),
+                "B": timeturner.timedelta(hours=4, minutes=30),
+                "C": timeturner.timedelta(hours=2, minutes=30),
             },
         ),
         id="segments with tags",
@@ -241,12 +240,12 @@ GET_SUMMARY_TEST_CASES = [
         models.DailySummary(
             day=date(1985, 5, 27),
             day_type=DayType.WORK,
-            work_time=timeturner.Duration(),
-            break_time=timeturner.Duration(),
-            over_time=timeturner.Duration(),
-            start=Time(0, 0),
-            end=Time(0, 0),
-            by_tag={"sick": timeturner.Duration(hours=24)},
+            work_time=timeturner.timedelta(),
+            break_time=timeturner.timedelta(),
+            over_time=timeturner.timedelta(),
+            start=time(0, 0),
+            end=time(0, 0),
+            by_tag={"sick": timeturner.timedelta(hours=24)},
         ),
         id="sick day",
     ),
@@ -262,12 +261,12 @@ GET_SUMMARY_TEST_CASES = [
         models.DailySummary(
             day=date(1985, 5, 27),
             day_type=DayType.WORK,
-            work_time=timeturner.Duration(hours=1),
-            break_time=timeturner.Duration(),
-            over_time=timeturner.Duration(hours=-7),
-            start=Time(9, 0),
-            end=Time(10, 0),
-            by_tag={"travel": timeturner.Duration(hours=1)},
+            work_time=timeturner.timedelta(hours=1),
+            break_time=timeturner.timedelta(),
+            over_time=timeturner.timedelta(hours=-7),
+            start=time(9, 0),
+            end=time(10, 0),
+            by_tag={"travel": timeturner.timedelta(hours=1)},
         ),
         id="one hour travel",
     ),
@@ -289,12 +288,12 @@ GET_SUMMARY_TEST_CASES = [
         models.DailySummary(
             day=date(1985, 5, 27),
             day_type=DayType.WORK,
-            work_time=timeturner.Duration(hours=4),
-            break_time=timeturner.Duration(hours=2),
-            over_time=timeturner.Duration(hours=-4),
-            start=Time(9, 0),
-            end=Time(15, 0),
-            by_tag={"travel": timeturner.Duration(hours=1)},
+            work_time=timeturner.timedelta(hours=4),
+            break_time=timeturner.timedelta(hours=2),
+            over_time=timeturner.timedelta(hours=-4),
+            start=time(9, 0),
+            end=time(15, 0),
+            by_tag={"travel": timeturner.timedelta(hours=1)},
         ),
         id="one hour travel, 3 hours work",
     ),
@@ -316,12 +315,12 @@ GET_SUMMARY_TEST_CASES = [
         models.DailySummary(
             day=date(1985, 5, 27),
             day_type=DayType.WORK,
-            work_time=timeturner.Duration(hours=10),
-            break_time=timeturner.Duration(hours=2),
-            over_time=timeturner.Duration(hours=2),
-            start=Time(0, 0),
-            end=Time(15, 0),
-            by_tag={"travel": timeturner.Duration(hours=10)},
+            work_time=timeturner.timedelta(hours=10),
+            break_time=timeturner.timedelta(hours=2),
+            over_time=timeturner.timedelta(hours=2),
+            start=time(0, 0),
+            end=time(15, 0),
+            by_tag={"travel": timeturner.timedelta(hours=10)},
         ),
         id="10 hour travel, 3 hours work",
     ),
@@ -343,12 +342,12 @@ GET_SUMMARY_TEST_CASES = [
         models.DailySummary(
             day=date(1985, 5, 27),
             day_type=DayType.WORK,
-            work_time=timeturner.Duration(hours=10),
-            break_time=timeturner.Duration(hours=8),
-            over_time=timeturner.Duration(hours=2),
-            start=Time(0, 0),
-            end=Time(22, 0),
-            by_tag={"travel": timeturner.Duration(hours=4)},
+            work_time=timeturner.timedelta(hours=10),
+            break_time=timeturner.timedelta(hours=8),
+            over_time=timeturner.timedelta(hours=2),
+            start=time(0, 0),
+            end=time(22, 0),
+            by_tag={"travel": timeturner.timedelta(hours=4)},
         ),
         id="4 hour travel, 10 hours work",
     ),
@@ -370,12 +369,12 @@ GET_SUMMARY_TEST_CASES = [
         models.DailySummary(
             day=date(1985, 5, 27),
             day_type=DayType.WORK,
-            work_time=timeturner.Duration(hours=11),
-            break_time=timeturner.Duration(hours=8),
-            over_time=timeturner.Duration(hours=3),
-            start=Time(0, 0),
-            end=Time(23, 0),
-            by_tag={"travel": timeturner.Duration(hours=4)},
+            work_time=timeturner.timedelta(hours=11),
+            break_time=timeturner.timedelta(hours=8),
+            over_time=timeturner.timedelta(hours=3),
+            start=time(0, 0),
+            end=time(23, 0),
+            by_tag={"travel": timeturner.timedelta(hours=4)},
         ),
         id="4 hour travel, 10 hours work",
     ),
