@@ -3,9 +3,8 @@ from datetime import datetime
 from pathlib import Path
 from typing import Iterator, cast
 
-from pendulum.parser import parse
-
 from timeturner.db import DatabaseConnection
+from timeturner.helper import parse
 from timeturner.models import PensiveRow, TimeSegment
 
 re_date = re.compile(r"^\d{4}-\d{2}-\d{2}")
