@@ -2,6 +2,8 @@
 
 ## 0.5.0 (unreleased)
 
+* get rid of pendulum to make it easier to package this with pyoxidizer
+
 ## 0.4.0 (2023-08-29)
 
 * add: `--show-all` option to `list` command
